--- a/NER_Bari A.ipynb
+++ b/NER_Bari A.ipynb
@@ -30,8 +30,8 @@
    "id": "49a0f07908bd8097",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T16:41:41.978433Z",
-     "start_time": "2025-03-12T16:41:41.812760Z"
+     "end_time": "2025-03-13T12:32:17.007111Z",
+     "start_time": "2025-03-13T12:32:16.829519Z"
     }
    },
    "source": [
@@ -41,7 +41,7 @@
     "nlp = spacy.load(\"en_core_web_sm\")\n"
    ],
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -58,8 +58,8 @@
    "id": "42dd77489c273519",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T16:41:42.023304Z",
-     "start_time": "2025-03-12T16:41:41.982745Z"
+     "end_time": "2025-03-13T12:32:17.048015Z",
+     "start_time": "2025-03-13T12:32:17.010543Z"
     }
    },
    "source": [
@@ -123,7 +123,7 @@
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -140,8 +140,8 @@
    "id": "42fed69cd7023506",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T16:41:42.037128Z",
-     "start_time": "2025-03-12T16:41:42.034745Z"
+     "end_time": "2025-03-13T12:32:17.061117Z",
+     "start_time": "2025-03-13T12:32:17.058656Z"
     }
    },
    "source": [
@@ -174,7 +174,7 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -191,8 +191,8 @@
    "id": "a638f49f9ef04775",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T16:41:42.051765Z",
-     "start_time": "2025-03-12T16:41:42.049054Z"
+     "end_time": "2025-03-13T12:32:17.074745Z",
+     "start_time": "2025-03-13T12:32:17.072099Z"
     }
    },
    "source": [
@@ -355,19 +355,19 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 31
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "id": "e0613d2431d018d5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T16:41:42.065383Z",
-     "start_time": "2025-03-12T16:41:42.062586Z"
+     "end_time": "2025-03-13T12:32:17.089413Z",
+     "start_time": "2025-03-13T12:32:17.086717Z"
     }
    },
    "source": [
-    "# Сохранение визуализации в HTML-файл (Исправленный код)\n",
+    "# Сохранение визуализации в HTML-файл\n",
     "html = displacy.render(doc, style=\"ent\", jupyter=False)  # Убираем page=True\n",
     "\n",
     "if html:  # Проверяем, что html не None\n",
@@ -386,7 +386,7 @@
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -403,8 +403,8 @@
    "id": "e67472dc67b6d7ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T16:41:42.080585Z",
-     "start_time": "2025-03-12T16:41:42.073015Z"
+     "end_time": "2025-03-13T12:32:17.101174Z",
+     "start_time": "2025-03-13T12:32:17.093685Z"
     }
    },
    "source": [
@@ -460,7 +460,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 33
+   "execution_count": 12
   }
  ],
  "metadata": {
